fix non-aligned language tags

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -122,6 +122,7 @@ span.language
 {
 	float: right;
 	font-size: 16px;
+	margin-top: 5px;
 }
 
 .posts
